# python-overpy

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  codeql-analysis.yml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  config.yml
.github/workflows/: ci.yml  pypi.yml
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  example.rst  faq.rst  index.rst  introduction.rst
examples/: get_areas.py  get_node.py  get_nodes.py  get_ways.py  overpy
overpy/: __about__.py  __init__.py  exception.py  helper.py
overpy/format/: geojson.py  osm_xml.py
tests/: README.md  __init__.py  base_class.py  test_exception.py  test_export.py  test_json.py  test_request.py  test_result.py  test_result_way.py  test_xml.py
tests/json/: area-01.json  node-01.json  relation-01.json  relation-02.json  relation-03.json  relation-04.json  remark-runtime-error-01.json  remark-runtime-remark-01.json  remark-unknown-01.json  result-expand-02.json  result-way-01.json  result-way-02.json  result-way-03.json  way-01.json  way-02.json  way-03.json  way-04.json  way-meta.json  way-meta_invalid-timestamp.json
tests/response/: bad-request-encoding.html  bad-request.html
tests/xml/: area-01.xml  node-01.xml  relation-01.xml  relation-02.xml  relation-03.xml  relation-04.xml  remark-runtime-error-01.xml  remark-runtime-remark-01.xml  remark-unknown-01.xml  way-01.xml  way-02.xml  way-03.xml  way-04.xml
