[metadata]
license-file = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Documentation = https://python-overpy.readthedocs.io/
    Source = https://github.com/DinoTools/python-overpy
    Issue Tracker = https://github.com/DinoTools/python-overpy/issues

[options]
python_requires = >=3.7
include_package_data = true
zip_safe = false

[aliases]
test=pytest

[tool:pytest]
python_files = tests/*.py
